@@ -15,10 +15,10 @@ MD5 1fc0cea9b2ea2303cd2346843dc08803 files/xautostart.conf 59
 RMD160 ca1ea3f1b82caa6e97d94835d88a39a6f153ff7a files/xautostart.conf 59
 SHA256 13398e0ffcd7005bc8c92f3cd62865d2601e52fc980a4702fa252bef5c1efcc7 files/xautostart.conf 59
 DIST open-vm-tools-2007.09.04-56574.tar.gz 1987725 RMD160 8bb9952471ff5635e70741afd357170b6c0a8307 SHA1 d3ffcd974e67b5f83b760582f8c2606721d94403 SHA256 4e4a5c805ffcbcf8de9deca9b96dd874d2be405a994729a4becf3501b73b46bc
-EBUILD open-vm-tools-0.0.20070904.56574.ebuild 3900 RMD160 aacfa9759127cc2c368e25b5d4de5acf8bd4cb7f SHA1 88d2856077d60e1d64b59007e8ef8ef4d8290893 SHA256 7d9560f37c9906cce014dea7230b70e4cd388bb711f931e812e94b13b85afcc4
-MD5 e4c614b59d786ddbbf49c6ae3bfa88a1 open-vm-tools-0.0.20070904.56574.ebuild 3900
-RMD160 aacfa9759127cc2c368e25b5d4de5acf8bd4cb7f open-vm-tools-0.0.20070904.56574.ebuild 3900
-SHA256 7d9560f37c9906cce014dea7230b70e4cd388bb711f931e812e94b13b85afcc4 open-vm-tools-0.0.20070904.56574.ebuild 3900
+EBUILD open-vm-tools-0.0.20070904.56574.ebuild 3804 RMD160 12465597beac5177d98116906cf04232807f0a3f SHA1 053ecc1a97eddcf940c205e587881a007b127bc0 SHA256 286fb07c4491d9e15f5f5b744a18b696f6bd789f1c9d9c02714bdf6e7da68dba
+MD5 7b80f94d78b94e837c7c70514d47f67b open-vm-tools-0.0.20070904.56574.ebuild 3804
+RMD160 12465597beac5177d98116906cf04232807f0a3f open-vm-tools-0.0.20070904.56574.ebuild 3804
+SHA256 286fb07c4491d9e15f5f5b744a18b696f6bd789f1c9d9c02714bdf6e7da68dba open-vm-tools-0.0.20070904.56574.ebuild 3804
 MD5 d0c42ef7b94e0aefbe09669b04adca0d files/digest-open-vm-tools-0.0.20070904.56574 295
 RMD160 43e2167130241214052b6fa7a739e80e574363be files/digest-open-vm-tools-0.0.20070904.56574 295
 SHA256 0e711a2915155961282df966b61408929cd10db16623356571bd7597d1b3bb62 files/digest-open-vm-tools-0.0.20070904.56574 295
